# ConvTriple

src/: CMakeLists.txt  mul_gen_test.cpp  tuples3_test.cpp  tuples4_test.cpp
src/core/: benching.hpp  hpmpc_interface.cpp  hpmpc_interface.hpp  keys.hpp
src/core/protocols/: ot_proto.hpp
src/io/: io_channel.hpp  net_io_channel.hpp
src/ot/: prg.h
